updated my notes

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,8 @@
 
+events {}
+
 http {
 	server {
-		listen 8080;
-		root /Users/plau/23-SimpleWebserv/index.html;
+		return 200 "Welcome";
 	}
 }
-
-events {}
